# pylibjpeg-rle

./: .codecov.yml  .coveragerc  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pytest-builds.yml  release-wheels.yml
docs/release_notes/: v1.0.0.rst  v1.1.0.rst  v1.2.0.rst  v1.3.0.rst  v2.0.0.rst  v2.1.0.rst  v2.2.0.rst
rle/: __init__.py  _rle.pyx  _version.py  utils.py
rle/benchmarks/: bench_decode.py  bench_encode.py
rle/src/: decode.cpp  decode.hpp
rle/src/rustrle/: Cargo.toml
rle/src/rustrle/src/: lib.rs
rle/tests/: __init__.py  bench_decode.py  test_decode.py  test_encode.py  test_handler.py  test_utils.py
src/: lib.rs
