[package]
name = "pylibjpeg-rle"
version = "1.1.0"
authors = ["scaramallion <scaramallion@users.noreply.github.com>"]
edition = "2024"
exclude = [".github", "docs", ".codecov.yml", "asv.*", ".gitignore", ".coveragerc"]

[lib]
name = "rle"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
bitvec = { version = "1.0.1" }
