[package]
name = "pylibjpeg-rle"
version = "1.2.0"
authors = ["scaramallion <scaramallion@users.noreply.github.com>"]
edition = "2024"
exclude = [".github", "docs", ".codecov.yml", "asv.*", ".gitignore", ".coveragerc"]

[lib]
name = "rle"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
