[package]
name = "rle"
version = "0.1.0"
authors = ["scaramallion <scaramallion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.13.1", features = ["extension-module"] }


[lib]
name = "_rle"
crate-type = ["cdylib"]
